[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.3",
    "fpdf>=1.7.2",
    "fpdf2>=2.8.3",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "praw>=7.8.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.46.1",
]
